-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 21, 25, 26, 27
-
Component/s: hotspot
-
b11
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8378757 | 26.0.2 | Martin Doerr | P3 | Resolved | Fixed | master |
We have seen failures on AIX while running java/util/zip/ZipFile/ZipFileSharedSourceTest.java. There were wrong ArrayIndexOutOfBoundsException like "Index 10 out of bounds for length 10".
The issue disappeared when excluding a method:
make run-test TEST=java/util/zip/ZipFile/ZipFileSharedSourceTest.java JTREG=VM_OPTIONS="-XX:CompileCommand=exclude,java.nio.charset.CharsetDecoder::decode"
Or when disabling the intrinsic (usable as workaround):
-XX:DisableIntrinsic=_countPositives
We noticed that the current implementation requires the "len" argument to be a properly zero (or sign) extended 32 bit integer value. However, this assumption can break due to C2 compiled computations and optimizations.
The issue disappeared when excluding a method:
make run-test TEST=java/util/zip/ZipFile/ZipFileSharedSourceTest.java JTREG=VM_OPTIONS="-XX:CompileCommand=exclude,java.nio.charset.CharsetDecoder::decode"
Or when disabling the intrinsic (usable as workaround):
-XX:DisableIntrinsic=_countPositives
We noticed that the current implementation requires the "len" argument to be a properly zero (or sign) extended 32 bit integer value. However, this assumption can break due to C2 compiled computations and optimizations.
- backported by
-
JDK-8378757 [PPC64] StringCoding.countPositives causes errors when the length is not a proper 32 bit int
-
- Resolved
-
- caused by
-
JDK-8281146 Replace StringCoding.hasNegatives with countPositives
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk26u/b6cf3406
-
Commit(master)
openjdk/jdk/aee4b02e
-
Review(master)
openjdk/jdk21u-dev/2623
-
Review(master)
openjdk/jdk25u-dev/303
-
Review(master)
openjdk/jdk26u/68
-
Review(master)
openjdk/jdk/29847
(3 links to)