8378353: [PPC64] StringCoding.countPositives causes errors when the length is not a proper 32 bit int

Reviewed-by: mbaesken, dbriemann